feat: cards and list components enhanced and header styles added

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  ul {
+    @apply list-none;
+  }
+
+  body {
+    @apply bg-main-bg;
+  }
+
+  a {
+    @apply no-underline;
+  }
+}
